--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,19 @@
 name: CI Pipeline
 
 on:
-  pull_request:
-    branches:
-      - main
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
+
+permissions:
+  contents: write
+  issues: write  # Potrzebne do tworzenia Issues na podstawie TODO
 
 jobs:
-
-  # Testy jednostkowe
-
+  # Testy jednostkowe z raportem pokrycia
   tests:
     name: Run Unit Tests with Coverage
     runs-on: ubuntu-latest
@@ -45,7 +47,7 @@ jobs:
           name: coverage-report
           path: coverage.xml
 
-  # Lint
+  # Lintowanie kodu
   lint:
     name: Lint Code with SuperLinter
     runs-on: ubuntu-latest
@@ -57,10 +59,10 @@ jobs:
       - name: Run SuperLinter
         uses: github/super-linter@v5
         env:
-          VALIDATE_PYTHON: true
+          VALIDATE_PYTHON: true # Aktywowanie lintera dla Pythona
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  # TODO
+  # Tworzenie Issues na podstawie TODO
   todo:
     name: Create Issues from TODOs
     runs-on: ubuntu-latest
