--- a/.github/workflows/mainn.yml
+++ b/.github/workflows/mainn.yml
@@ -1,16 +1,7 @@
 name: CI Pipeline
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
-permissions:
-  contents: write
-  issues: write 
+  push
 
 jobs:
 
