--- a/.github/workflows/mainn.yml
+++ b/.github/workflows/mainn.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run Unit Tests with Coverage
         run: |
           source .venv/bin/activate
-          coverage run --source=src -m unittest discover -s tests
+          coverage run --source=src -m unittest discover -s tests -p "test_*.py"
           coverage report
           coverage xml
 
