--- a/.github/workflows/mainn.yml
+++ b/.github/workflows/mainn.yml
@@ -44,7 +44,6 @@ jobs:
           name: coverage-report
           path: coverage.xml
 
-  # Lintowanie kodu
   lint:
     name: Lint Code with SuperLinter
     runs-on: ubuntu-latest
@@ -60,7 +59,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   todo:
-    name: Create Issues from TODOs
+    name: Create Issues from TODO
     runs-on: ubuntu-latest
 
     steps:
